edited Makefile and build.gradle.kts

--- a/app/Makefile
+++ b/app/Makefile
@@ -1,20 +1,15 @@
 .DEFAULT_GOAL := build-run
 
-run-dist:
-	./build/install/app/bin/app
-
-start:
-	./gradlew run
-
-build:
-	./gradlew clean
-	./gradlew build
-
 clean:
 	./gradlew clean
 
+build:
+	./gradlew clean build
+
+install:
+	./gradlew clean install
+
 test:
-	./gradlew clean
 	./gradlew test
 
 report:
@@ -23,6 +18,13 @@ report:
 lint:
 	./gradlew checkstyleMain checkstyleTest
 
-build-run: build run
+run-dev:
+	./gradlew run --args='--spring.profiles.active=development'
 
+start-prod:
+	./gradlew bootRun --args='--spring.profiles.active=production'
+
+build-run: build run-dev
+	
 .PHONY: build
+
