--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,18 @@
-FROM gradle:8.7.0-jdk21
+FROM gradle:8.10-jdk21
 
 WORKDIR /app
 
 COPY . .
 
-RUN ./gradlew bootJar
+COPY ./gradle gradle
+COPY ./build.gradle.kts .
+COPY ./settings.gradle.kts .
+
+COPY ./src src
+COPY ./config config
+
+RUN gradle build
+
+RUN gradle installDist
 
 CMD ./build/install/app/bin/app
