--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,10 +38,9 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
 
       - name: Grant execute permission for gradlew
-        run: chmod +x ./app/gradlew
+        run: chmod +x ./gradlew
 
       - name: Build and analyze
-        working-directory: ./app
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew clean test jacocoTestReport sonar --info
